--- a/client/src/components/InvoiceList/invoicelist.css
+++ b/client/src/components/InvoiceList/invoicelist.css
@@ -3,4 +3,10 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+
+  padding: 2rem;
+}
+
+.invoice-item__info {
+  color: var(--grey);
 }
