--- a/client/src/components/Status/status.css
+++ b/client/src/components/Status/status.css
@@ -1,7 +1,11 @@
 .status {
-  border-radius: 15px;
+  border-radius: 5px;
   font-weight: 700;
-  padding: 3.3rem 2.5rem;
+  padding: 1rem 2rem;
+
+  text-align: center;
+  vertical-align: middle;
+  width: 104px;
 }
 
 .status--draft {
