--- a/client/src/components/Dropdown/dropdown.css
+++ b/client/src/components/Dropdown/dropdown.css
@@ -1,11 +1,26 @@
 .dropdown-container {
   display: flex;
   flex-direction: column;
+
+  position: relative;
 }
 
 .dropdown-items {
   display: flex;
   flex-direction: column;
+
+  padding: 1rem;
+  margin-top: 2rem;
+  position: absolute;
+  top: 100%;
+  right: 0.5rem;
+  background-color: var(--black);
+
+  z-index: 100;
+}
+
+.dropdown-items > * {
+  margin-bottom: 1rem;
 }
 
 .dropdown-toggle {
