--- a/client/src/components/NavBar/navbar.css
+++ b/client/src/components/NavBar/navbar.css
@@ -33,8 +33,10 @@
 }
 
 .avatar-container {
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
+
+  padding-right: 1rem;
 }
 
 .avatar {
@@ -42,7 +44,9 @@
   justify-content: center;
   align-items: center;
 
-  width: 6.7rem;
+  /* width: 6.7rem; */
+
+  padding-right: 1rem;
 }
 
 .avatar img {
