--- a/client/src/components/Backdrop/backdrop.css
+++ b/client/src/components/Backdrop/backdrop.css
@@ -5,9 +5,7 @@
   align-items: center;
   justify-content: center;
 
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  position: fixed;
+  height: 100vh;
+  width: 100%;
 }
